syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.suichen.utils.grpc";

message GrpcServiceConfig {
    string serviceName = 1;
    string instanceId = 2;
}

message GrpcAck {
    bool aborted = 1;
}

message HelloRequest {
    string name = 1;
    string age = 2;
}

message HelloResponse {
    string message = 1;
}