syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.suichen.utils.grpc";
option java_outer_classname = "HelloWorldServiceProto";

import "common.proto";

service Greeter {
    rpc SayHello(HelloRequest) returns (HelloResponse) {

    }
}

